Remove some of the usages of SessionFactoryScope.getCollectingStatementInspector() as well as a bunch of calls to deprecated stuff
Signed-off-by: Jan Schatteman <jschatte@redhat.com>